[package]
name = "market"
version = "0.1.0"
authors = ["wangyu190810 <190810401@qq.com>"]

[dependencies]
time="*"
serde_json = "1.0"
serde="*"
serde_derive="*"
redis-client="*"
redis = "*"
byteorder = "0.3"
bytebuffer = {git="https://github.com/wangyu190810/rust-bytebuffer",branch = "master"}
toml = "0.4.5"
log = "0.4"
env_logger = "*"
